style: update about, contact, infra, Chile, and main CSS for layout and responsiveness

--- a/Chile.html
+++ b/Chile.html
@@ -196,7 +196,7 @@
                     </div>
                 </div>
 
-                <form class="contact-form" action="https://formsubmit.co/zzzzzaq291@gmail.com" method="POST"
+                <form class="contact-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST"
                     id="contactForm">
                     <!-- Form Inputs -->
                     <input type="text" id="form-name" name="name" data-i18n="form.name" data-i18n-attr="placeholder"
@@ -222,7 +222,7 @@
                     <input type="hidden" name="_autoresponse" data-i18n="form.autoresponse" data-i18n-attr="value"
                         value="¡Gracias por contactarnos! Nos comunicaremos con usted pronto.">
                     <input type="hidden" name="_replyto" value="">
-                    <!-- <input type="hidden" name="_cc" value="zzzzzaq291@gmail.com"> -->
+                    <!-- <input type="hidden" name="_cc" value="gwscary@gmail.com"> -->
 
                     <!-- Error/Success Messages -->
                     <div id="form-error" role="alert" aria-live="assertive" data-i18n="form.error.generic">No se pudo
