--- a/import.html
+++ b/import.html
@@ -225,7 +225,7 @@ Message: ${formData.message || 'N/A'}`;
                   // 1. Send to Email with HTML structure
                   const emailSubject = `New Quote Request from ${formData.name}`;
 
-                  fetch('https://formsubmit.co/ajax/contacto@divine.cl', {
+                  fetch('https://formsubmit.co/ajax/gwscary@gmail.com', {
                     method: 'POST',
                     headers: {
                       'Content-Type': 'application/json',
@@ -681,7 +681,7 @@ Message: ${formData.message || 'N/A'}`;
         </div>
 
         <!-- Updated Form with FormSubmit Configuration -->
-        <form id="prescriptionForm" action="https://formsubmit.co/contacto@divine.cl" method="POST"
+        <form id="prescriptionForm" action="https://formsubmit.co/gwscary@gmail.com" method="POST"
           enctype="multipart/form-data">
           <!-- FormSubmit Configuration -->
           <input type="hidden" name="_template" value="table">
@@ -1071,7 +1071,7 @@ Message: ${formData.message || 'N/A'}`;
         </div>
 
         <div class="modal-body">
-          <form id="poaForm" class="animated-form" action="https://formsubmit.co/contacto@divine.cl" method="POST">
+          <form id="poaForm" class="animated-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST">
             <!-- Add these hidden fields for FormSubmit -->
             <input type="hidden" name="_subject" value="New POA Document Request">
             <input type="hidden" name="_template" value="table">
@@ -1538,7 +1538,7 @@ Message: ${formData.message || 'N/A'}`;
           </div>
         </div>
 
-        <form class="contact-form" action="https://formsubmit.co/zzzzzaq291@gmail.com" method="POST" id="contactForm">
+        <form class="contact-form" action="https://formsubmit.co/gwscary@gmail.com" method="POST" id="contactForm">
           <!-- Form Inputs -->
           <input type="text" id="form-name" name="name" data-i18n="form.name" data-i18n-attr="placeholder"
             placeholder="Nombre" required aria-describedby="err-name">
